The Leave Controller works now
